<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/holo"
    tools:context=".Store">
<LinearLayout
    android:padding="16dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

  <TextView
      android:layout_width="310dp"
      android:textStyle="bold"
      android:layout_height="40dp"
      android:textColor="@android:color/background_dark"
      android:text="@string/welcome_to_store"
      android:textSize="30sp"/>
  <TextView
      android:layout_width="310dp"
      android:layout_height="50dp"
      android:textSize="20sp"
      android:text="a greenpaper plant at maturity ready for harvest"
      android:textColor="@android:color/holo_green_dark"/>
  <ImageView
      android:layout_marginTop="-5dp"
      android:layout_width="200dp"
      android:layout_height="200dp"
      android:src="@mipmap/agri4"/>
<TextView
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:text="@string/disc"/>
  <TextView
      android:layout_width="270dp"
      android:layout_height="40dp"
      android:text="a tomato plant at one month"
      android:textSize="20sp"
      android:textColor="@android:color/holo_green_dark"/>
  <ImageView
      android:layout_width="200dp"
      android:layout_height="200dp"
      android:src="@mipmap/agri3"/>
  <TextView
      android:layout_width="match_parent"
      android:layout_height="140dp"
      android:text="@string/disc2"/>
  <TextView
      android:layout_width="320dp"
      android:layout_height="40dp"
      android:textColor="@android:color/holo_green_dark"
      android:textSize="20sp"
      android:text="the farm animals and husbandray"/>
  <ImageView
      android:layout_width="200dp"
      android:layout_height="200dp"
      android:src="@mipmap/agri2"/>
<TextView
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:text="@string/disc3"/>





</LinearLayout>

</ScrollView>